# argus

./: .gitignore  AGENTS.md  CODE_REVIEW.md  CONSIDERATIONS.md  LICENSE  PRIVACY.md  README.md  SECURITY_REVIEW.md  argus.yaml.example  athena_beaver.yaml.example  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: deploy.yml  destroy.yml  security-scan.yml
deploy/: .dockerignore  Dockerfile.backend  build.sh  deploy.sh  destroy.sh
docs/: auth-cognito.md  auth-none.md  auth-sso.md  deployment.md  fedramp-deployment.md  local-development.md  ui-features.md  workgroup-routing.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: editor.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
infra/: acm.tf  apigateway.tf  athena.tf  audit.tf  cloudfront.tf  cognito.tf  dynamodb.tf  ecr.tf  lambda.tf  main.tf  outputs.tf  route53.tf  s3.tf  sso.tf  variables.tf
scripts/: install-hooks.sh  pre-push
src/argus/: lambda_handler.py
src/athena_beaver/: lambda_handler.py
tests/: conftest.py  test_api_auth.py  test_api_catalog.py  test_api_config.py  test_api_queries.py  test_api_workgroups.py  test_athena_service.py  test_audit_logger.py  test_auth_session_cache.py  test_aws_endpoints.py  test_catalog_service.py  test_config.py  test_error_sanitization.py  test_export.py  test_lambda_handler.py  test_naming.py  test_session_store.py  test_sso_service.py  test_workgroup_service.py
tests/functional/: test_export_flow.py  test_query_flow.py
(+89 files in other folders)
